--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "shop",
+  "name": "craft-beer-shop",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://bananazigzags.github.io/shop",
+  "homepage": "https://bananazigzags.github.io/craft-beer-shop",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
